--- a/app/src/main/res/layout/activity_add_feed_back.xml
+++ b/app/src/main/res/layout/activity_add_feed_back.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddFeedBackActivity">
+    tools:context=".activity.AddFeedBackActivity">
 
 
     <androidx.cardview.widget.CardView
