--- a/app/src/main/res/layout/activity_feedback_dashbord.xml
+++ b/app/src/main/res/layout/activity_feedback_dashbord.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FeedbackDashboardActivity">
+    tools:context=".activity.FeedbackDashboardActivity">
 
     <TextView
         android:id="@+id/txtDashboard"
